<?xml version="1.0" encoding="utf-8"?>
<androidx.drawerlayout.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:id="@+id/drawerlayout"
    android:layout_height="match_parent"
    tools:context=".dashboard">

    <RelativeLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent">
...
